Fixed hover menu positions when header not visible

--- a/share/userfiles/templates/default.css
+++ b/share/userfiles/templates/default.css
@@ -44,7 +44,6 @@ img {border:0}
 /* Global DIVs */
 .main {margin:0;padding:0;background-color:white;color:black}
 .header {position:fixed;top:0;left:0;padding:0;z-index:100;min-width:700px;}
-#headershow {display:none}
 .headerspacer {width:100%}
 .map {position:relative;top:0;left:0}
 
@@ -518,6 +517,9 @@ td#popupWindowContent fieldset.form label {
 }
 
 #headershow {
+	display: none;
+	width: 9px;
+	min-width: 9px;
 	background-image: none;
 }
 
